--- a/services/css/serviços.css
+++ b/services/css/serviços.css
@@ -6,6 +6,7 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
+
 #plano1{
     background-color: white;
     width: 200px;
@@ -93,24 +94,23 @@ p{
 
 #plano3top{
     background-color: #ead1cb;
-    width: 210px;
-    height: 20px;
+    width: 160px;
+    height: 15px;
     margin-left: 20px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
 #plano3{
     background-color: white;
-    width: 250px;
-    height: 500px;
+    width: 200px;
+    height: 400px;
     border-radius: 20px;
-    font-size: 18px;
 }
 
 #plano3botom{
     background-color: #ead1cb;
-    width: 210px;
-    height: 20px;
+    width: 160px;
+    height: 15px;
     margin-left: 20px;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -123,20 +123,20 @@ p{
 .letraGrande{
     display: flex;
     justify-content: center;
-    font-size: 40px;
+    font-size: 30px;
     text-shadow:  1px 1px 2px  rgb(68, 68, 68);
     color: #ead1cb;
 }
 
 .btn3{
-    padding: 20px;
+    padding: 10px;
     margin-left: 30px;
     margin-right: 30px;
     margin-top: 10px;
     color: black;
     background-color: #ead1cb;
     border-radius: 10px;
-    font-size: 18px;
+    /* font-size: 18px; */
 }
 
 #plano4top{
@@ -188,24 +188,41 @@ p{
 .carrossel{
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    padding: 50px;
 }
-#distancia{
-    margin-left: 50px;
+
+.assinatura {
+    text-decoration: none;
+    color: #000000;
+    font-weight: bold;
 }
+.assinatura:hover{
+    text-decoration: none;
+    color: black;
+}
+/* #distancia{} */
+
 .carrossel1{
     margin-top: 100px;
+    display: inline-block;
     
 }
 .carrossel2{
     margin-top: 100px;
+    display: inline-block;
 }
 .carrossel3{
-    margin-top: 50px;
+    margin-top: 100px;
+    display: inline-block;
 }
 .carrossel4{
     margin-top: 100px;
+    display: inline-block;
 }
 .pacotes{
     text-align: center;
     font-size: 15px;
 }
+
+
